--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,8 @@
 .app {
   height: 100vh;
   width: 100vw;
-  color: #2c002e;
+  color: var(--primary-fg-color);
+  background-color: var(--primary-bg-color);
   display: flex;
   flex-direction: row;
   overflow: auto;
@@ -37,7 +38,6 @@
   height: 100%;
   width: 100%;
   position: fixed;
-  background-color: #7c7cd9;
   z-index: -1;
 }
 
