--- a/src/comps/Leftbar.css
+++ b/src/comps/Leftbar.css
@@ -5,15 +5,14 @@
   position: sticky;
   top: 0;
 
-  padding: 250px 30px 250px 30px;
+  padding: 20vh 30px 15vh 30px;
   text-align: right;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
 
-  box-shadow: 0px 0px 17px 5px #0000000c;
+  box-shadow: var(--inside-border);
 }
-
 
 .name-bar > h1 {
   font-size: 3.5em;
@@ -25,9 +24,9 @@
 }
 
 .name-bar > .iconlinks {
-  padding: 20px 10px 50px 100px;
+  padding: 20px 10px 70px 100px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  column-gap: 30px;
+  column-gap: 40px;
 }
