--- a/src/comps/Rightbar.css
+++ b/src/comps/Rightbar.css
@@ -11,7 +11,7 @@
   flex-direction: column;
   justify-content: space-between;
 
-  box-shadow: 0px 0px 17px 5px #0000000c;
+  box-shadow: var(--inside-border);
 }
 
 .info {
@@ -19,5 +19,5 @@
 }
 
 .info:hover {
-  color: white;
+  color: var(--fg-hover-color);
 }
