--- a/src/comps/Settings.css
+++ b/src/comps/Settings.css
@@ -5,12 +5,17 @@
   align-items: flex-end;
 }
 
-.brightness-icon {
+.brightness-icon.moon {
   font-size: 2.5em;
 }
 
+.brightness-icon.sun {
+  font-size: 3em;
+  margin: -.084em;
+}
+
 .brightness-icon:hover {
-  color: white;
+  color: var(--fg-hover-color);
 }
 
 .fake-settings {
@@ -19,9 +24,9 @@
   width: 30px;
   height: 120px;
   border-radius: 20px;
-  border: 3px solid #2c002e;
+  border: 3px solid var(--primary-fg-color);
 }
 
 .fake-settings:hover {
-  border-color: white;
+  border-color: var(--fg-hover-color);
 }
