--- a/src/App.css
+++ b/src/App.css
@@ -8,29 +8,13 @@
   flex-direction: row;
   overflow: auto;
   overflow-y: scroll;
-}
-
-.topbar {
-  min-height: 100px;
-  width: 100%;
-  position: sticky;
-  top: 0;
-
-  background-color: rgba(255, 255, 255, 0.123);
-}
-
-.botbar {
-  min-height: 100px;
-  width: 100%;
-  position: sticky;
-  bottom: 0;
-
-  background-color: rgba(255, 255, 255, 0.123);
+  transition: background-color .25s ease-in;
 }
 
 .content {
   width: 50%;
   text-align: center;
+  transition: all .25s ease-in;
 
 }
 
