--- a/src/comps/Rightbar.css
+++ b/src/comps/Rightbar.css
@@ -1,10 +1,11 @@
 
 .rightbar {
+  --padding: 50px;
   width: 20%;
   min-width: 20%;
   position: sticky;
   top: 0;
-  padding: 50px 50px 50px 30px;
+  padding: var(--padding) var(--padding) var(--padding) var(--padding);
   text-align: right;
 
   display: flex;
@@ -12,36 +13,69 @@
   justify-content: space-between;
   align-items: flex-end;
 
+  transition: box-shadow .25s ease-in;
   box-shadow: var(--inside-border);
 }
 
 .info {
+  transition: color .5s ease-out;
   position: relative;
   width: fit-content;
+  direction: rlt;
 }
 
-.info:hover {
+.info.vis {
   color: var(--fg-hover-color);
 }
 
 .info-box {
+  overflow: hidden;
   z-index: 1;
-  border: .1em solid;
+  border: .2em solid;
   border-radius: 10px;
   position: absolute;
   right: 10px;
   bottom: 10px;
+  text-align: center;
+  align-content: center;
+  height: fit-content;
   width: fit-content;
+  max-width: 0px;
+  max-height: 0px;
+  font-family: monospace;
+  font-size: 1.2em;
 
-  padding: 10px 30px 30px 10px;
+  white-space: nowrap;
+  transition: max-width .75s ease-out,
+              max-height .75s ease-out,
+              padding .75s ease-out;
+}
+
+.info-box.vis {
+  white-space: normal;
+  max-height: 200px;
+  max-width: calc(100% - var(--padding) * 2);
+  padding: 10px 30px 30px 30px;
 }
 
 .info-box > p {
-  display: inline-block;
+  display: block;
+  user-select: none;
 }
 
-.info-box.hidden {
-  display: none;
+.info-box > .link {
+  display: flex;
+  align-items: center;
+  color: inherit;
+  text-decoration: none;
+}
+
+.info-box > .link:hover, .link:active {
+  color: var(--focus-fg-color);
+}
+
+.info-box > .link > svg {
+  margin: 0 0 0 .5em;
 }
 
 .info > svg {
@@ -49,6 +83,7 @@
   z-index: 2;
   padding: -3px;
   border-radius: 3em;
+  transition: border .25s ease-in, box-shadow .25s ease-in;
   border: .2em solid var(--primary-bg-color);
   box-shadow: inset 0px 0px 0px 1em var(--primary-bg-color);
   font-size: 2em;
