--- a/src/comps/Leftbar.css
+++ b/src/comps/Leftbar.css
@@ -1,7 +1,7 @@
 
 .leftbar {
   width: 20%;
-  min-width: 400px;
+  min-width: 19.15em;
   position: sticky;
   top: 0;
 
@@ -16,7 +16,7 @@
 }
 
 .name-bar > h1 {
-  font-size: 3.5em;
+  font-size: 3em;
   font-weight: 700;
   transition: color .25s ease-in;
 }
@@ -29,6 +29,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  font-size: .7em;
 }
 
 .name-bar > .iconlinks {
