--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,7 @@
 
-.app {
-  height: 100vh;
-  width: 100vw;
+#root {
   color: var(--primary-fg-color);
   background-color: var(--primary-bg-color);
-  
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  
-  overflow-y: scroll;
-  overflow-x: hidden;
 }
 
 .leftbar {
@@ -39,17 +30,26 @@
 @media only screen and (max-width: 1500px) {
   .app {
     flex-direction: column;
-    overflow-y: hidden;
+    overflow-y: scroll;
   }
 
   .topbar {
-    max-height: 7%;
-    min-height: 7%;
+    position: sticky;
+    top: 0;
+    width: 100%;
+    max-height: 7vh;
+    min-height: 7vh;
+
+    background: inherit;
+    box-shadow: var(--inside-border);
   }
 
   .botbar {
-    max-height: 7%;
-    min-height: 7%;
+    position: sticky;
+    bottom: 0;
+    width: 100%;
+    max-height: 7vh;
+    min-height: 7vh;
 
     background: inherit;
     box-shadow: var(--inside-border);
@@ -59,7 +59,5 @@
     flex: 0 0 86%;
     width: 100%;
     max-height: 86%;
-    overflow-y: scroll;
-    overflow-x: hidden;
   }
 }
