--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,9 @@
   color: var(--primary-fg-color);
   background-color: var(--primary-bg-color);
 
-
   display: flex;
+  height: 100vh;
+
 
   overflow-y: scroll;
 }
@@ -62,12 +63,14 @@
     top: 0;
     min-height: 8vh;
     max-height: 2em;
+    background: inherit;
   }
 
   .endbar {
     bottom: 0;
     height: 5vh;
     min-height: 1.5em;
+    background: inherit;
   }
 
   .content {
@@ -82,7 +85,7 @@
     }
 
     .endbar {
-      position: sticky;
+      position: relative;
       min-height: 8vh;
       max-height: 2em;
     }
