--- a/src/App.css
+++ b/src/App.css
@@ -79,7 +79,7 @@
 
   /* Mobile (read comma as "or") */
   @media only screen and (max-height: 460px), (max-width: 460px) {
-    .startbar {
+    /* .startbar {
       position: fixed;
       top: 0;
       height: 5vh;
@@ -88,13 +88,13 @@
     }
 
     .endbar {
-      position: sticky;
+      position: fixed;
       bottom: 0;
       left: 0;
       width: 100%;
       min-height: 8vh;
       max-height: 2em;
-    }
+    } */
   }
 
   /* .app {
