--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 
-.app {
+#root {
   color: var(--primary-fg-color);
   background-color: var(--primary-bg-color);
 
@@ -21,7 +21,7 @@
 .endbar {
   flex: 0 1 10%;
   position: sticky;
-  bottom: 0;
+  top: 0;
 
   box-shadow: var(--inside-border);
 }
@@ -54,7 +54,7 @@
 /* Portrait */
 @media only screen and (max-aspect-ratio: 5 / 4) {
 
-  .app {
+  #root {
     position: relative;
     display: block;
   }
@@ -81,19 +81,18 @@
   @media only screen and (max-height: 460px), (max-width: 460px) {
     .startbar {
       position: fixed;
-      /* top: 0;
       height: 5vh;
-      min-height: 1.5em; */
+      min-height: 1.5em;
       width: 100%;
     }
 
     .endbar {
       position: fixed;
-      /* bottom: 0;
-      left: 0; */
+      bottom: 0;
+      top: unset;
       width: 100%;
-      /* min-height: 8vh;
-      max-height: 2em; */
+      min-height: 8vh;
+      max-height: 2em;
     }
   }
 
