--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,14 @@
+html, body, #root {
+  height: 100%;
+}
+
 
 #root {
   color: var(--primary-fg-color);
   background-color: var(--primary-bg-color);
 
   display: flex;
-  height: 100vh;
+  /* height: 100vh; */
 
 
   overflow-y: scroll;
