--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ html, body, #root {
   flex: 0 1 20%;
   position: sticky;
   top: 0;
+  height: 100%;
   
   box-shadow: var(--inside-border);
 }
@@ -26,6 +27,7 @@ html, body, #root {
   flex: 0 1 10%;
   position: sticky;
   top: 0;
+  height: 100%;
 
   box-shadow: var(--inside-border);
 }
