--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ html, body, #root {
   flex: 0 1 20%;
   position: sticky;
   top: 0;
-  height: 100%;
+  height: 100vh;
   
   box-shadow: var(--inside-border);
 }
@@ -27,7 +27,7 @@ html, body, #root {
   flex: 0 1 10%;
   position: sticky;
   top: 0;
-  height: 100%;
+  height: 100vh;
 
   box-shadow: var(--inside-border);
 }
