redoing layout, mobile breaks, etc.

--- a/src/comps/IconLinks.css
+++ b/src/comps/IconLinks.css
@@ -6,6 +6,10 @@
   transition: color .25s ease-in;
 }
 
+.iconlink > svg {
+  display: block;
+}
+
 .iconlink:hover, .iconlink:active {
   color: var(--fg-hover-color);
 }
