--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,17 @@
+
+/* Default (Desktop Landscape) */
 html, body, #root, .app {
   height: 100%;
 }
-
 
 .app {
   color: var(--primary-fg-color);
   background-color: var(--primary-bg-color);
 
   display: flex;
-  /* height: 100vh; */
-
+  justify-content: space-between;
 
   overflow-y: scroll;
-}
-
-.startbar {
-  flex: 0 1 20%;
-  position: sticky;
-  top: 0;
-  height: 100vh;
-  
-  box-shadow: var(--inside-border);
-}
-
-.endbar {
-  flex: 0 1 10%;
-  position: sticky;
-  top: 0;
-  height: 100vh;
-
-  box-shadow: var(--inside-border);
 }
 
 .content {
@@ -46,95 +28,29 @@ html, body, #root, .app {
   z-index: -1;
 }
 
-/* Mobile (read comma as "or") */
-@media only screen and (max-height: 460px), (max-width: 460px) {
-  .startbar {
-    flex: 0 1 10%;
-  }
+/* Mobile Default (Landscape) */
+@media only screen and (max-height: 512px), (max-width: 512px) {
   
-  .endbar {
-    flex: 0 1 20%;
+  /* Mobile Portrait */
+  @media only screen and (max-aspect-ratio: 3  / 2) {
+    .content {
+      flex: unset;
+      width: 100%;
+    }
   }
 }
 
-/* Portrait */
-@media only screen and (max-aspect-ratio: 5 / 4) {
+/* Desktop Portrait */
+@media (max-aspect-ratio: 3 / 2) and (min-width: 513px) and (min-height: 513px), (max-width: 1200px) and (min-width: 513px) and (min-height: 513px) {
 
   .app {
     position: relative;
     display: block;
   }
 
-  .startbar {
-    top: 0;
-    min-height: 8vh;
-    max-height: 2em;
-    background: inherit;
-  }
-
-  .endbar {
-    bottom: 0;
-    max-height: 5vh;
-    min-height: 1.5em;
-    background: inherit;
-  }
-
   .content {
     flex: unset;
-  }
-
-  /* Mobile (read comma as "or") */
-  @media only screen and (max-height: 460px), (max-width: 460px) {
-    .startbar {
-      position: fixed;
-      height: 5vh;
-      min-height: 1.5em;
-      width: 100%;
-    }
-
-    .endbar {
-      position: fixed;
-      bottom: 0;
-      top: unset;
-      width: 100%;
-      min-height: 8vh;
-      max-height: 2em;
-    }
-  }
-
-  /* .app {
-    display: block;
-    flex-direction: column;
-    overflow-y: scroll;
-  }
-
-  .topbar {
-    position: sticky;
-    top: 0;
     width: 100%;
-    height: 3em;
-
-    background: inherit;
-    box-shadow: var(--inside-border);
-    
-    overflow: hidden;
   }
 
-  .botbar {
-    position: sticky;
-    bottom: 0;
-    width: 100%;
-    height: 3em;
-
-    background: inherit;
-    box-shadow: var(--inside-border);
-    
-    overflow: hidden;
-  }
-
-  .content {
-    flex: 0 0 86%;
-    width: 100%;
-    max-height: 86%;
-  } */
 }
