--- a/src/comps/LightToggle.css
+++ b/src/comps/LightToggle.css
@@ -1,5 +1,5 @@
 
-.settings {
+.light-toggle {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -20,17 +20,4 @@
 
 .brightness-icon:hover {
   color: var(--fg-hover-color);
-}
-
-.fake-settings {
-  margin-top: 50px;
-  margin-right: 2px;
-  width: 30px;
-  height: 120px;
-  border-radius: 20px;
-  border: .2em solid var(--primary-fg-color);
-}
-
-.fake-settings:hover {
-  border-color: var(--fg-hover-color);
 }
