--- a/src/views/Experiments.css
+++ b/src/views/Experiments.css
@@ -1,26 +1,60 @@
 
-.section {}
+.section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 .section-content {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-content: space-between;
-  gap: 50px 100px;
+  gap: 5em;
+  max-width: 50em;
 }
 
 .experiment-block {
-  width: 30%;
-  min-width: 30%;
-  height: 155px;
+  width: 20em;
+  height: 15em;
+
   /* border: 1px solid rgba(95, 48, 126, 0.336); */
   border-radius: 8px;
-  background-color: rgba(95, 48, 126, 0.055);
+  background-color: rgba(87, 67, 177, 0.253);
 }
 
-.ghost-block {
-  width: 30%;
-  min-width: 30%;
-  height: 155px;
-  color: #0000;
+.section.tech > .section-content {
+  gap: 2em;
+}
+
+.skill-block {
+  width: 23em;
+
+  border-radius: 8px;
+  background-color: rgba(87, 67, 177, 0.253);
+}
+
+.skill-block > h2 {
+  width: 100%;
+  /* text-align: center; */
+}
+
+.skill-block > h2 > svg {
+font-size: 1.2em;
+margin-left: .5em;
+}
+
+.skills {
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
+  padding: .5em;
+}
+
+.skill {
+  background-color: var(--primary-bg-color);
+  border-radius: .3em;
+  padding: .5em;
+  margin: .5em;
 }
