--- a/src/views/Home.css
+++ b/src/views/Home.css
@@ -1,7 +1,38 @@
 
 .intro {
-  padding-top: 300px;
+  padding-bottom: 10vh;
   font-size: 2.5em;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.intro > .introduction {
+  margin-bottom: 5vh;
+}
+
+.intro > p {
+  max-width: 30em;
+  font-size: .9em;
+}
+
+.intro > p > a {
+  color: var(--primary-fg-color);
+  text-decoration-thickness: .1em;
+  text-decoration-style: wavy;
+  transition: color .2s ease-out;
+}
+
+.intro > p > a:hover {
+  color: var(--fg-hover-color);
+}
+
+p.smol {
+  font-size: .7em;
+  max-width: 30em;
+  font-style: italic;
+  font-weight: 400;
 }
 
 h1 {
@@ -9,5 +40,63 @@ h1 {
 }
 
 .greeting {
-  margin-bottom: .5em;
+  margin-bottom: 0em;
+}
+
+.section {
+  margin: 5vh 0 10vh 0
+}
+
+.section h1 {
+  font-size: 3em;
+  font-weight: 700;
+}
+
+.section-content {
+  margin: 5vh 0 5vh 0
+}
+
+.section a {
+  color: var(--primary-fg-color);
+  font-size: 1.5em;
+  text-decoration-thickness: .09em;
+  text-decoration-style: wavy;
+  transition: color .2s ease-out;
+}
+
+.section a:hover {
+  color: var(--fg-hover-color);
+}
+
+/* Mobile Default (Landscape) */
+@media only screen and (max-height: 512px), (max-width: 512px) {
+  
+  .intro {
+    font-size: 1.8em;
+    padding-bottom: 5vh;
+  }
+
+  p.smol {
+    font-size: .6em;
+    max-width: 20em;
+    font-style: italic;
+    font-weight: 400;
+  }
+  
+  .intro > p > a {
+    color: var(--primary-fg-color);
+    text-decoration-thickness: .08em;
+  }
+
+  /* Mobile Portrait */
+  @media only screen and (max-aspect-ratio: 3 / 2) {
+    .intro {
+      
+    }
+  }
+}
+
+/* Desktop Portrait */
+@media (max-aspect-ratio: 3 / 2) and (min-width: 513px) and (min-height: 513px), (max-width: 1200px) and (min-width: 513px) and (min-height: 513px) {
+  
 }
