--- a/src/comps/EndBar.css
+++ b/src/comps/EndBar.css
@@ -7,8 +7,8 @@
   position: sticky;
   top: 0;
   height: 100vh;
-  mix-blend-mode: hard-light;
 
+  background-color: var(--primary-bg-color);
   box-shadow: var(--inside-border);
 }
 
