--- a/src/comps/StartBar.css
+++ b/src/comps/StartBar.css
@@ -9,6 +9,7 @@
   top: 0;
   height: 100vh;
   
+  background-color: var(--primary-bg-color);
   box-shadow: var(--inside-border);
 
   text-align: right;
